welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: ';' expected but ')' found.
while (estFaceMur())(!estSurBiscuit)){
                                    ^